# async_request

./: .gitignore  README.md  db_info.py  pyproject.toml  requirements.txt  run.py  run2.py  run_migrations.py  test_script.py
app/: app.py  database.py  models.py  run.py
app2/: app.py  run.py
migrations/models/: 0_20221118133124_init.py
settings/: .env.example  config.py  models.py
urils/: andwa_request.py  data_generation.py  other_function.py
v1/: run.py  run2.py
v1/app/: app.py
v1/app2/: app.py
v1/settings/: .env.example  config.py  models.py
v2/: run.py
v2/app/: app.py
v2/urils/: andwa_request.py  data_generation.py  other_function.py
