[tool.poetry]
name = "async-request"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "async_request"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
aiohttp = "^3.8.3"
pandas = "^1.5.1"
aiofiles = "^22.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
